--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,7 @@ jobs:
         run: yarn install
       - name: lint
         run: yarn run eslint
+      - name: build
+        run: yarn run build
+      - name: test
+        run: yarn run test
