--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,9 @@ jobs:
         run: yarn run build
       - name: test
         run: yarn run test
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: yarn run test:e2e
+          start: yarn run start-prod
+          wait-on: http://localhost:5000
