--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,3 +28,9 @@ jobs:
           start: yarn run start-prod
           wait-on: http://localhost:5000
           browser: chrome
+      - name: heroku
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: infinite-ridge-75598
+        heroku_email: maitran.ln99@gmail.com
