--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
     "style-loader": "^1.2.1"
   },
@@ -53,6 +52,7 @@
     "react-router-dom": "^5.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "html-webpack-plugin": "^5.5.0"
   }
 }
