--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
-    "html-loader": "^1.1.0",
-    "jest": "^25.5.4",
-    "style-loader": "^1.2.1"
+    "jest": "^25.5.4"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -53,6 +51,8 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
-    "html-webpack-plugin": "^5.5.0"
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^1.2.1",
+    "html-loader": "^1.1.0"
   }
 }
