--- a/package.json
+++ b/package.json
@@ -40,7 +40,12 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
-    "jest": "^25.5.4"
+    "jest": "^25.5.4",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^1.2.1",
+    "html-loader": "^1.1.0"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -48,11 +53,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "html-webpack-plugin": "^5.5.0",
-    "style-loader": "^1.2.1",
-    "html-loader": "^1.1.0"
+    "webpack": "^4.43.0"
   }
 }
