--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
     "jest": "^25.5.4",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "html-webpack-plugin": "^5.5.0",
@@ -52,7 +53,6 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "webpack": "^4.43.0"
+    "react-router-dom": "^5.2.0"
   }
 }
