--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,6 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: infinite-ridge-75598
           heroku_email: maitran.ln99@gmail.com
+          healthcheck: https://infinite-ridge-75598.herokuapp.com/health
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
