telling the app to install dev dependencies

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,7 @@ jobs:
           wait-on: http://localhost:5000
           browser: chrome
       - name: deploy-to-heroku
+        run: yarn install --dev
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
