--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,7 +29,7 @@ jobs:
           wait-on: http://localhost:5000
           browser: chrome
       - name: install dev dependencies
-        run: yarn install --dev
+        run: yarn install -production=false
       - name: deploy-to-heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
