--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "engines": {
-    "node": "14.18.1"
+    "node": "14.x"
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development",
