--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
     "cypress:open": "cypress open",
-    "test:e2e": "cypress run",
-    "heroku-prebuild": "yarn install --production=false"
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
