Add steps to Hello World workflow

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,3 +8,7 @@ jobs:
     steps:
       - name: Say hello
         run: echo "Hello World!"
+      - name: Show current date
+        run: date
+      - name: Show directory content
+        run: ls -l
