--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,4 @@ jobs:
           heroku_email: sngmanhim@hotmail.com
           healthcheck: https://another-fso-pokedex.herokuapp.com/health
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
