--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
+    # if check ensures that the step is executed only
+    # when the code is being merged or pushed to the main branch
+    if: ${{ github.event_name == 'push' }}
     steps:
       # The uses keyword tells the workflow to run a specific action
       - uses: actions/checkout@v2
