--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,8 @@ jobs:
     # if check ensures that the step is executed only
     # when the code is being merged or pushed to the main branch
     if: ${{ github.event_name == 'push' }}
+    # Skip deployment if commit message contains #skip
+    if: ${{ !contains(github.event.head_commit.message, '#skip') }}
     steps:
       # The uses keyword tells the workflow to run a specific action
       - uses: actions/checkout@v2
