--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,11 +11,10 @@ on:
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-18.04
-    # if check ensures that the step is executed only
+    # 1. if check ensures that the step is executed only
     # when the code is being merged or pushed to the main branch
-    if: ${{ github.event_name == 'push' }}
-    # Skip deployment if commit message contains #skip
-    if: ${{ !contains(github.event.head_commit.message, '#skip') }}
+    # 2. Skip deployment if commit message contains #skip
+    if: ${{ github.event_name == 'push' || !contains(github.event.head_commit.message, '#skip') }}
     steps:
       # The uses keyword tells the workflow to run a specific action
       - uses: actions/checkout@v2
