--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-18.04
     # 1. if check ensures that the step is executed only
     # when the code is being merged or pushed to the main branch
+    # When a pull request is merged, the name of the event is somehow paradoxically push
     # 2. Skip deployment if commit message contains #skip
     if: ${{ github.event_name == 'push' || !contains(github.event.head_commit.message, '#skip') }}
     steps:
