--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,7 @@ jobs:
     # when the code is being merged or pushed to the main branch
     # When a pull request is merged, the name of the event is somehow paradoxically push
     # 2. Skip deployment if commit message contains #skip
-    if: ${{ github.event_name == 'push' || !contains(github.event.head_commit.message, '#skip') }}
+    if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip') }}
     steps:
       # The uses keyword tells the workflow to run a specific action
       - uses: actions/checkout@v2
