started adding workflows

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,5 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Say hello
-        run: |
-          echo "Hello World!"
+        run: echo "Hello World!"
