started adding workflows

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,3 +9,7 @@ jobs:
     steps:
       - name: Say hello
         run: echo "Hello World!"
+      - name: it is now
+        run: date
+      - name: current directory
+        run: ls
