fixed heroku pipeline step

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,4 +30,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "safe-harbor-99423"
+          heroku_email: "a.mckendry2@gmail.com"
       
