--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,12 @@ jobs:
           node-version: '12.x'
       - name: npm install 
         run: npm install  
-      - name: run lint
+      - name: lint
         run: |
           npm run eslint
+      - name: build
+        run: |
+          npm run build
+      - name: test
+        run: |
+          npm run test
