test heroku deployment

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,9 +24,15 @@ jobs:
       - name: test
         run: |
           npm run test
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
+      # - name: e2e tests
+      #   uses: cypress-io/github-action@v2
+      #   with:
+      #     command: npm run test:e2e
+      #     start: npm run start-prod
+      #     wait-on: http://localhost:5000
+      -name: run akhileshns/heroku-deploy@v3.12.12
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          command: npm run test:e2e
-          start: npm run start-prod
-          wait-on: http://localhost:5000
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "sheltered-mountain-75670"
+          heroku_email: "tom.green83@protonmail.com"
