--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,3 +36,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "sheltered-mountain-75670"
           heroku_email: "tom.green83@protonmail.com"
+          healthcheck: "https://sheltered-mountain-75670.herokuapp.com/health"
+          checkstring: "ok"
