--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,3 +43,15 @@ jobs:
           healthcheck: "https://sheltered-mountain-75670.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+
+  version_update:
+    if: ${{ github.event_name == 'push' }}
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2  
+    - name: Bump version and push tag
+    uses: anothrNick/github-tag-action@1.33.0
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      DEFAULT_BUMP: minor
+      DRY_RUN: true
