--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,10 +48,10 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2  
     - name: Bump version and push tag
-    uses: anothrNick/github-tag-action@1.33.0
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      DEFAULT_BUMP: minor
-      DRY_RUN: true
+      uses: actions/checkout@v2
+      uses: anothrNick/github-tag-action@1.33.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BUMP: minor
+        DRY_RUN: true
