--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,8 +48,8 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     runs-on: ubuntu-18.04
     steps:
-    - name: Bump version and push tag
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: Bump version and push tag      
       uses: anothrNick/github-tag-action@1.33.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
