\#skip Test skip commit

--- a/.github/workflows/testing_github_contexts.yml
+++ b/.github/workflows/testing_github_contexts.yml
@@ -22,3 +22,8 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
+      - name: skip commit?
+        env:
+            COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
+        if: contains(env.COMMIT_MESSAGES, "#skip")
+        run: echo "Skip"
