Test skipping commits #skip

--- a/.github/workflows/testing_github_contexts.yml
+++ b/.github/workflows/testing_github_contexts.yml
@@ -25,5 +25,5 @@ jobs:
       - name: skip commit?
         env:
             COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: contains(env.COMMIT_MESSAGES, "#skip")
+        if: contains(env.COMMIT_MESSAGES, '#skip')
         run: echo "Skip"
