Testing skipping commit #skup

--- a/.github/workflows/testing_github_contexts.yml
+++ b/.github/workflows/testing_github_contexts.yml
@@ -26,4 +26,4 @@ jobs:
         env:
             COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         if: contains(env.COMMIT_MESSAGES, '#skip')
-        run: echo "Skip"
+        run: echo "Skipped"
