--- a/.github/workflows/testing_github_contexts.yml
+++ b/.github/workflows/testing_github_contexts.yml
@@ -23,7 +23,7 @@ jobs:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
       - name: skip commit?
-        if: "contains(github.event.commits.*.message, '#skip')"
+        if: contains(toJson(github.event.commits.*.message), '#skip')
         run: echo "Skipped"
       - name: don't skip commit?
         if: (!contains(github.event.commits.*.message, '#skip'))
