--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,7 +34,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: run akhileshns/heroku-deploy@v3.12.12
-        if: ${{ github.event_name == 'push' }} && (!contains(github.event.commits.*.message, '#skip'))
+        if: ${{ github.event_name == 'push' && !contains(github.event.commits.*.message, '#skip') }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -45,7 +45,7 @@ jobs:
           rollbackonhealthcheckfailed: true
 
   version_update:
-    if: ${{ github.event_name == 'push' }} && (!contains(github.event.commits.*.message, '#skip'))
+    if: ${{ github.event_name == 'push' && !contains(github.event.commits.*.message, '#skip') }} 
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
