--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,13 +57,13 @@ jobs:
         with:
           status: custom
           fields: workflow,job,commit,repo,ref,author,took
-          custom_payload:
-          {
-            attachments: [{
-            color: 'good',
-            text: 'A new version deployed'
-            }]
-          }
+          custom_payload: |
+            {
+              attachments: [{
+                color: 'good',
+                text: `A new version deployed`,
+              }]
+            }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         
