--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,7 +61,7 @@ jobs:
             {
               attachments: [{
                 color: 'good',
-                text: `A new version deployed`,
+                text: `A new version deployed to "https://sheltered-mountain-75670.herokuapp.com" (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR}` build took ${process.env.AS_TOOK},
               }]
             }
         env:
