--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,14 +43,14 @@ jobs:
       #     healthcheck: "https://sheltered-mountain-75670.herokuapp.com/health"
       #     checkstring: "ok"
       #     rollbackonhealthcheckfailed: true
-      # - name: post job failure/cancellation to slack
-      #   if: job.status == 'failure' || job.status == 'cancelled'
-      #   uses: 8398a7/action-slack@v3
-      #   with:
-      #     status: ${{ job.status }}
-      #     fields: repo,message,commit,author,took
-      #   env:
-      #     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: post job failure/cancellation to slack
+        if: job.status == 'failure' || job.status == 'cancelled' || job.status == 'success'
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,took
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
       - name: post job success to slack
         if: job.status == 'success'
         uses: 8398a7/action-slack@v3
@@ -61,7 +61,7 @@ jobs:
             {
               attachments: [{
                 color: 'good',
-                text: `A new version deployed to "https://sheltered-mountain-75670.herokuapp.com" (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} build took ${process.env.AS_TOOK}`,
+                text: `A new version deployed to https://sheltered-mountain-75670.herokuapp.com (${process.env.AS_COMMIT}) by ${process.env.AS_AUTHOR} build took ${process.env.AS_TOOK}`,
               }]
             }
         env:
