Use "ok" as health check string

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,6 +19,7 @@ jobs:
           heroku_app_name: "sheltered-sea-46348"
           heroku_email: "granholm.mats@gmail.com"
           healthcheck: "https://sheltered-sea-46348.herokuapp.com/health"
+          checkstring: "ok"
       - name: npm install
         run: npm install
       - name: lint
