--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,9 +18,9 @@ jobs:
       - name: lint
         run: npm run eslint
       - name: build
-        run: npm build
+        run: npm run build
       - name: test
-        run: npm test
+        run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
