--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,4 +22,4 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
 #        run: echo "$COMMIT_MESSAGES"
-        run: echo "contains($COMMIT_MESSAGES[0], '#skip'"
+        run: echo "${{ contains(toJson(github.event.commits.*.message)[0], '#skip' }}"
