--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,3 +19,8 @@ jobs:
         run: npm run eslint
       - name: test
         run: npm run test
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "mighty-badlands-74018" #Must be unique in Heroku
+          heroku_email: "minuthprom321@gmail.com"
