--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: '12.x'
       - name: yarn install
-        run: yarn
+        run: yarnx
       - name: lint
         run: yarn eslint
       - name: test
