--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,3 +11,15 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello world!"
+  now_it_is:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Now it is
+        run: |
+          date
+  directory_content:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Directory content
+        run: |
+          ls -l
