--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,3 +20,8 @@ jobs:
         run: npm run build
       - name: test
         run: npm test
+      - name: e2e tests
+        command: npm run e2e
+        start: npm run start:prod
+        wait-on: http://localhost:5000
+      
