--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
+    "test:e2e": "cypress run",
+    "cypress:open": "cypress open",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production"
   },
@@ -46,6 +48,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "cypress": "^9.5.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
