--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - uses: cypress-io/github-action@v2
         with:
           node-version: '12.x'
       - name: npm install
@@ -22,7 +21,9 @@ jobs:
       - name: test
         run: npm test
       - name: e2e tests
-        command: npm run e2e
-        start: npm run start:prod
-        wait-on: http://localhost:5000
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run e2e
+          start: npm run start:prod
+          wait-on: http://localhost:5000
       
