--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,6 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           command: npm run e2e
-          start: npm run start:prod
+          start: npm run start-prod
           wait-on: http://localhost:8080
       
