--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,7 +23,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: npm run e2e
+          command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:8080
       
