--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2.11.7
         with:
+          build: npx cypress info
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
