--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,10 +24,9 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2.11.7
         with:
-          browser: chrome
-          headless: true
-          command: npm run test:e2e
           start: npm run start-prod
+          command: npm run test:e2e
+          wait-on: 'http://localhost:5000'
       # - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       #   with:
       #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
