--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - master
-
+  pull_request:
+    branches: [master]
+    types: [open,synchronize]
 jobs:
   build:
     runs-on: ubuntu-latest
