--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,6 +32,7 @@ jobs:
           start: npm run start-prod
           command: npm run test:e2e
           wait-on: 'http://localhost:5000'
+        if: ${{ github.event_name == 'push' }}
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
